src/objects/GeocodingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings that control whether webservice classes call out to find the latitude, longitude, federal congressional district, and state legislative district for contact and account addresses.</description>
    <fields>
        <fullName>GeocodeAccounts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the trigger will try to look up latitude and longitude for accounts when they are created or when their address is changed.</inlineHelpText>
        <label>Geocode Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeocodeContacts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the trigger will try to look up latitude and longitude for contacts when they are created or when their address is changed.</inlineHelpText>
        <label>Geocode Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeocoderPassword__c</fullName>
        <inlineHelpText>Password for paid account at geocoder.us webservice.</inlineHelpText>
        <label>Geocoder Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeocoderUsername__c</fullName>
        <inlineHelpText>Username for paid account at geocoder.us webservice.</inlineHelpText>
        <label>Geocoder Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetAccountDistricts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the trigger will try to use the Mobile Commons webservice to look up congressional and state legislative districts for accounts when they are created or when address is changed.</inlineHelpText>
        <label>Get Account Districts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GetContactDistricts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the trigger will try to use the Mobile Commons webservice to look up congressional and state legislative districts for contacts when they are created or when address is changed.</inlineHelpText>
        <label>Get Contact Districts</label>
        <type>Checkbox</type>
    </fields>
    <label>Geocoding Settings</label>
</CustomObject>